--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Local .terraform directories
-**/.terraform/*
+**/.terraform*
+
+# generated via "make ci"
+examples/**/.terraform.lock.hcl
 
 # .tfstate files
 *.tfstate
@@ -7,14 +10,13 @@
 
 # Crash log files
 crash.log
-crash.*.log
 
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
+# Ignore any .tfvars files that are generated automatically for each Terraform run. Most
+# .tfvars files are managed as part of configuration and so should be included in
+# version control.
+#
+# example.tfvars
 *.tfvars
-*.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
@@ -24,11 +26,20 @@ override.tf.json
 *_override.tf.json
 
 # Include override files you do wish to add to version control using negated pattern
+#
 # !example_override.tf
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 
-# Ignore CLI configuration files
-.terraformrc
-terraform.rc
+# Credentials Files
+**/credentials.json
+**/*.json
+
+# Local testing variables
+
+# vim
+*.swp
+
+/.idea/
+.DS_Store
