--- a/.github/workflows/trivy-scan.yaml
+++ b/.github/workflows/trivy-scan.yaml
@@ -1,9 +1,9 @@
-name: build
+name: Trivy scan
 on:
   - pull_request
 jobs:
-  build:
-    name: Build
+  trivy:
+    name: trivy
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout code
