SAAS-23305: Changing naming convention in terraform-docs.yaml

--- a/.github/workflows/terraform-docs.yaml
+++ b/.github/workflows/terraform-docs.yaml
@@ -14,5 +14,7 @@ jobs:
         with:
           working-dir: .
           output-file: README.md
+          scan-ref: '.'
+          scan-type: 'repo'
           output-method: inject
           git-push: "true"
