fix: fix cspm_service_account_email variable condition
- fixing variable condition for `local.cspm_service_account_email` in `project_attachment` module
- adding variable validation for `var.aqua_api_key` & `var.aqua_api_secret` in `project_attachment` module
- running terraform fmt on `modules/onboarding/modules/iam/locals.tf`
- update `README` in `modules/onboarding/README.md`
- update `README` in `modules/org_projects/README.md`

--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -31,6 +31,12 @@ jobs:
             echo "--> Running tests at $tcase"
             (
               cd $tcase || exit 1
+              echo "Replacing <REPLACE_ME> placeholders"
+              if [[ "$OSTYPE" == "darwin"* ]]; then
+                sed -i '' 's/<REPLACE_ME>/dummy_value/g' *.tf
+              else
+                sed -i 's/<REPLACE_ME>/dummy_value/g' *.tf
+              fi
               echo "Terraform Format Check"
               terraform fmt -check
               echo "Terraform Init"
